Finished demystify AI

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.so
 *.dylib
 *.env
+*.DS_Store
 # Test binary, built with `go test -c`
 *.test
 
@@ -17,6 +18,6 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 **/env/
-
+**/__pycache__/
 # Go workspace file
 go.work
