--- a/stop-wasting-working-software/compose.yaml
+++ b/stop-wasting-working-software/compose.yaml
@@ -1,12 +1,3 @@
-# Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Docker Compose reference guide at
-# https://docs.docker.com/go/compose-spec-reference/
-
-# Here the instructions define your application as a service called "server".
-# This service is built from the Dockerfile in the current directory.
-# You can add other services your application may depend on here, such as a
-# database or a cache. For examples, see the Awesome Compose repository:
-# https://github.com/docker/awesome-compose
 services:
   # notifications:
   #   build:
@@ -14,13 +5,6 @@ services:
   #     target: final
   #   ports:
   #     - 8090:8090
-  #
-  #   # The commented out section below is an example of how to define a PostgreSQL
-  #   # database that your application can use. `depends_on` tells Docker Compose to
-  #   # start the database before your application. The `db-data` volume persists the
-  #   # database data between container restarts. The `db-password` secret is used
-  #   # to set the database password. You must create `db/password.txt` and add
-  #   # a password of your choosing to it before running `docker compose up`.
   #   depends_on:
   #     db:
   #       condition: service_healthy
@@ -59,8 +43,6 @@ services:
   #     - 8050:8050
   #   depends_on:
   #     db:
-  #       condition: service_healthy
-  # destroyers:
   #   build:
   #     context: .
   #     target: final
@@ -91,47 +73,52 @@ services:
     networks:
       - bad_inc_net
 
-  traefik:
-    image: "traefik:v2.11"
-    container_name: "traefik"
-    command:
-      #- "--log.level=DEBUG"
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entryPoints.web.address=:80"
-    ports:
-      - "80:80"
-      - "8080:8080"
+  kong-database:
+    image: postgres:9.6
+    restart: always
+    environment:
+      POSTGRES_USER: kong
+      POSTGRES_DB: kong
+      POSTGRES_PASSWORD: kong
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    networks:
-      - bad_inc_net
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: ["CMD", "pg_isready"]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-#
-# volumes:
-#   db-data:
-#
-# secrets:
-#   db-password:
-#     file: db/password.txt
+      - kong-database:/var/lib/postgresql/data
+
+  kong-migration:
+    image: kong:latest
+    restart: on-failure
+    depends_on:
+      - kong-database
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+      KONG_CASSANDRA_CONTACT_POINTS: kong-database
+    command: ["kong", "migrations", "bootstrap"]
+
+  kong:
+    image: kong:latest
+    restart: always
+    depends_on:
+      - kong-database
+      - kong-migration
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+      KONG_CASSANDRA_CONTACT_POINTS: kong-database
+      KONG_ADMIN_GUI_URL: http://localhost:8002
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+    ports:
+      - "8000:8000"
+      - "8002:8002"
+      - "8443:8443"
+      - "8001:8001"
+      - "8444:8444"
+
+volumes:
+  kong-database:
 
 networks:
   bad_inc_net:
