Finishes grpc package for nemesis

--- a/stop-wasting-working-software/cmd/users/Dockerfile
+++ b/stop-wasting-working-software/cmd/users/Dockerfile
@@ -32,7 +32,7 @@ ARG TARGETARCH
 # source code into the container.
 RUN --mount=type=cache,target=/go/pkg/mod/ \
   --mount=type=bind,target=. \
-  CGO_ENABLED=0 GOARCH=$TARGETARCH go build -o /bin/server .
+  CGO_ENABLED=0 GOARCH=$TARGETARCH go build -o /bin/users .
 
 ################################################################################
 # Create a new stage for running the application that contains the minimal
@@ -70,10 +70,10 @@ RUN adduser \
 USER appuser
 
 # Copy the executable from the "build" stage.
-COPY --from=build /bin/server /bin/
+COPY --from=build /bin/users /bin/
 
 # Expose the port that the application listens on.
 EXPOSE 8081
 
 # What the container should run when it is started.
-ENTRYPOINT [ "/bin/server" ]
+ENTRYPOINT [ "/bin/users" ]
