adds dockerfiles config

--- a/stop-wasting-working-software/cmd/notifications/Dockerfile
+++ b/stop-wasting-working-software/cmd/notifications/Dockerfile
@@ -5,10 +5,10 @@ FROM denoland/deno:alpine-1.36.4
 WORKDIR /app
 
 # Copy the necessary files into the container
-COPY . .
+COPY ./cmd/notifications/ .
 
 # Expose the port the service will run on
-EXPOSE 8001
+EXPOSE 8091
 
 # Set the default command to run your Deno service
 CMD ["run", "--allow-net", "main.ts"]
