--- a/stop-wasting-working-software/.env.example
+++ b/stop-wasting-working-software/.env.example
@@ -1,3 +1,5 @@
-MONGO_INITDB_ROOT_USERNAME: admin
-MONGO_INITDB_ROOT_PASSWORD: password
-
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=password
+RABBITMQ_DEFAULT_PASS=guest
+RABBITMQ_DEFAULT_USER=guest
+SECRET_KEY=my_little_secret
