--- a/stop-wasting-working-software/cmd/nemesis/Dockerfile
+++ b/stop-wasting-working-software/cmd/nemesis/Dockerfile
@@ -1,21 +1,51 @@
-# Use the official Golang image
-FROM golang:1.19-alpine
+# syntax=docker/dockerfile:1
 
-# Set the working directory
-WORKDIR /app
+# Create a stage for building the application.
+ARG GO_VERSION=1.22
+FROM --platform=$BUILDPLATFORM golang:${GO_VERSION} AS build
+WORKDIR /src
 
-# Copy the Go modules and dependencies
+# Install protoc and the Go plugins for protobuf
+RUN apt-get update && apt-get install -y \
+  protobuf-compiler \
+  && rm -rf /var/lib/apt/lists/*
+
+# Install the Go protobuf and gRPC plugins
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.30.0
+RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2.0
+
+# Download dependencies as a separate step to take advantage of Docker's caching.
 COPY go.mod go.sum ./
-RUN go mod download
+RUN go mod download -x
 
-# Copy the source code
+# Copy the entire application source code
 COPY . .
 
-# Build the Go application
-RUN go build -o nemesis_service .
+# Generate the protobuf code
+RUN protoc --proto_path=./cmd/nemesis/api/proto --go_out=./cmd/nemesis/api/gen --go-grpc_out=./cmd/nemesis/api/gen ./cmd/nemesis/api/proto/*.proto
 
-# Expose the gRPC port
+# Build the application for the nemesis service
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o /nemesis_service ./cmd/nemesis
+
+# Create a new stage for running the application
+FROM ubuntu:latest AS final
+
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y \
+  ca-certificates \
+  tzdata \
+  && rm -rf /var/lib/apt/lists/*
+
+# Create a non-privileged user
+# Copy the executable from the build stage
+COPY --from=build /nemesis_service /
+
+# Ensure the binary is executable
+RUN chmod +x /nemesis_service
+
+# Expose the port that the application listens on
 EXPOSE 50051
 
-# Command to run the application
-CMD ["./nemesis_service"]
+# Set the entry point
+ENTRYPOINT [ "/nemesis_service" ]
+
