--- a/stop-wasting-working-software/compose.yaml
+++ b/stop-wasting-working-software/compose.yaml
@@ -5,12 +5,17 @@ services:
       dockerfile: ./cmd/notifications/Dockerfile
     ports:
       - 8091:8091
+    env_file:
+      - .env
     networks:
       - bad_inc_net
+    depends_on:
+      rabbitMq:
+        condition: service_healthy
+
   users:
     build:
       context: .
-      target: final
       dockerfile: ./cmd/users/Dockerfile
     ports:
       - 8081:8081
@@ -18,14 +23,24 @@ services:
       - .env
     networks:
       - bad_inc_net
+    depends_on:
+      - mongodb
+      - rabbitMq
+
   nemesis:
     build:
       context: .
       dockerfile: ./cmd/nemesis/Dockerfile
     ports:
       - 50051:50051
+    env_file:
+      - .env
     networks:
       - bad_inc_net
+    depends_on:
+      - mongodb
+      - rabbitMq
+
   mongodb:
     image: mongo:latest
     container_name: mongodb
@@ -52,48 +67,23 @@ services:
       - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
     networks:
       - bad_inc_net
-
-  kong-database:
-    image: postgres:9.6
-    restart: always
-    environment:
-      POSTGRES_USER: kong
-      POSTGRES_DB: kong
-      POSTGRES_PASSWORD: kong
-    volumes:
-      - kong-database:/var/lib/postgresql/data
-    networks:
-      - bad_inc_net
-
-  kong-migration:
-    image: kong:latest
-    restart: on-failure
-    depends_on:
-      - kong-database
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kong
-      KONG_CASSANDRA_CONTACT_POINTS: kong-database
-    command: ["kong", "migrations", "bootstrap"]
-    networks:
-      - bad_inc_net
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   kong:
     image: kong:latest
     restart: always
-    depends_on:
-      - kong-database
-      - kong-migration
     environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kong
-      KONG_CASSANDRA_CONTACT_POINTS: kong-database
       KONG_ADMIN_GUI_URL: http://localhost:8002
       KONG_ADMIN_LISTEN: 0.0.0.0:8001
+      KONG_DECLARATIVE_CONFIG: /kong/kong.yml
+      KONG_DATABASE: "off"
+    volumes:
+      - ./kong.yml:/kong/kong.yml
+      - ./cmd/nemesis/api/proto/nemesis.proto:/proto
     ports:
       - "8000:8000"
       - "8002:8002"
