--- a/stop-wasting-working-software/.env.example
+++ b/stop-wasting-working-software/.env.example
@@ -3,3 +3,7 @@ MONGO_INITDB_ROOT_PASSWORD=password
 RABBITMQ_DEFAULT_PASS=guest
 RABBITMQ_DEFAULT_USER=guest
 SECRET_KEY=my_little_secret
+KONG_ADMIN_GUI_URL=http://localhost:8002
+KONG_ADMIN_LISTEN=0.0.0.0:8001
+KONG_DECLARATIVE_CONFIG=/kong/kong.yml
+KONG_DATABASE="off"
