--- a/stop-wasting-working-software/compose.yaml
+++ b/stop-wasting-working-software/compose.yaml
@@ -24,8 +24,8 @@ services:
     networks:
       - bad_inc_net
     depends_on:
-      - mongodb
-      - rabbitMq
+      rabbitMq:
+        condition: service_healthy
 
   nemesis:
     build:
@@ -38,8 +38,8 @@ services:
     networks:
       - bad_inc_net
     depends_on:
-      - mongodb
-      - rabbitMq
+      rabbitMq:
+        condition: service_healthy
 
   mongodb:
     image: mongo:latest
@@ -76,11 +76,8 @@ services:
   kong:
     image: kong:latest
     restart: always
-    environment:
-      KONG_ADMIN_GUI_URL: http://localhost:8002
-      KONG_ADMIN_LISTEN: 0.0.0.0:8001
-      KONG_DECLARATIVE_CONFIG: /kong/kong.yml
-      KONG_DATABASE: "off"
+    env_file:
+      - .env
     volumes:
       - ./kong.yml:/kong/kong.yml
       - ./cmd/nemesis/api/proto/nemesis.proto:/proto
