--- a/stop-wasting-working-software/compose.yaml
+++ b/stop-wasting-working-software/compose.yaml
@@ -80,7 +80,8 @@ services:
       - .env
     volumes:
       - ./kong.yml:/kong/kong.yml
-      - ./cmd/nemesis/api/proto/nemesis.proto:/proto
+      - ./cmd/nemesis/api/proto/:/proto/
+      - ./cmd/nemesis/api/dep/google/api/:/proto/google/api/
     ports:
       - "8000:8000"
       - "8002:8002"
