--- a/micro-frontends/remote/package.json
+++ b/micro-frontends/remote/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard",
+  "name": "remote",
   "version": "1.0.0",
   "scripts": {
     "build": "NODE_ENV=production rspack build",
@@ -12,15 +12,15 @@
     "@rspack/cli": "0.5.4",
     "@rspack/core": "0.5.4",
     "@rspack/plugin-react-refresh": "0.5.4",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.1.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^8.0.0",
+    "vue-loader": "^16.8.1",
+    "vue-template-compiler": "^2.6.14",
     "react-refresh": "^0.14.0",
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
-    "preact": "^10.5.14"
+    "vue": "^3.2.19"
   }
 }
